// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test render Radio Select should render default values 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="0"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-kubernetes"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Kubernetes
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="1"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-github"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Github
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="2"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-gcp"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          GCP
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="3"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-elk"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          ELK Service
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="4"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-gotlab"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Git Labs
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="5"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-datadog"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Datadog
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="6"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-slack"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Slack
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="7"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-jenkins"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Jenkins
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test render Radio Select should render with disabled value 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="0"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-kubernetes"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Kubernetes
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="1"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-github"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Github
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 card disabled"
      data-index="2"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-gcp"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          GCP
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="3"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-elk"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          ELK Service
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="4"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-gotlab"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Git Labs
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="5"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-datadog"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Datadog
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="6"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-slack"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Slack
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="7"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-jenkins"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Jenkins
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test render Radio Select should render with selected values 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="0"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-kubernetes"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Kubernetes
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="1"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-github"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Github
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card selected interactive"
      data-index="2"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-gcp"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          GCP
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="3"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-elk"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          ELK Service
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="4"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-gotlab"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Git Labs
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="5"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-datadog"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Datadog
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="6"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-slack"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Slack
        </p>
      </div>
    </div>
    <div
      class="bp3-card bp3-interactive bp3-elevation-0 card interactive"
      data-index="7"
      tabindex="0"
    >
      <div
        class="cardIcon"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-jenkins"
        >
          <svg
            height="25"
            width="25"
          />
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          Jenkins
        </p>
      </div>
    </div>
  </div>
</div>
`;
